加入google站长工具验证

--- a/_posts/2012-10-11-我所理解的敏捷.md
+++ b/_posts/2012-10-11-我所理解的敏捷.md
@@ -14,7 +14,7 @@ title: 我所理解的敏捷
 
 4. **TDD**：测试驱动开发，主要就是通过单元测试覆盖重点功能点，最后只是一个代码的整合而已，这也是一个很好的习惯。首先，锻炼开发的分析能力，将一个大的功能拆分一些松散的基本功能点；其次，如果覆盖了基本功能点的测试，那么也会减少整体测试bug出现的几率；再者，测试用例也不失为一份很好的文档和工作记录。
 
-5. **思想大于流程**：以上这4点是我认为比较核心的敏捷思想，当然还有结对编程、分享之类，就不在这里赘述了。scrum中的每日站立会、燃尽图、便条、故事会等等都是流程，是为这写核心思想所服务的。程序员天生对自由都是格外的敏感，对表格、文档和会议相当谨慎，我们热爱“简单、粗暴”的东西，所以白板、小纸条、面对面才会在scrum中格外受欢迎。思想要大于流程，但是对于不太成熟的团队（不是每个人都深刻的理解敏捷）来说，流程又是必须的，它可以帮助那些新手快速的走上敏捷道路。所以寻求一个思想与流程之间的平衡点也是一个很有意思的工作。
+5. **思想大于流程**：以上这4点是我认为比较核心的敏捷思想，当然还有结对编程、分享之类，就不在这里赘述了。scrum中的每日站立会、燃尽图、便条、故事会等等都是流程，是为这些核心思想所服务的。程序员天生对自由都是格外的敏感，对表格、文档和会议相当谨慎，我们热爱“简单、粗暴”的东西，所以白板、小纸条、面对面才会在scrum中格外受欢迎。思想要大于流程，但是对于不太成熟的团队（不是每个人都深刻的理解敏捷）来说，流程又是必须的，它可以帮助那些新手快速的走上敏捷道路。所以寻求一个思想与流程之间的平衡点也是一个很有意思的工作。
 
 以上这些就是我对敏捷的粗略看法，欢迎留言讨论。
 
