大概完成，提交我所理解的敏捷

--- a/_posts/2012-10-11-我所理解的敏捷.md
+++ b/_posts/2012-10-11-我所理解的敏捷.md
@@ -6,7 +6,7 @@ title: 我所理解的敏捷
 
 我所以为敏捷的核心有如下几点：
 
-1. **快速迭代**：这个看似简单，往往实践起来最容易被人忽视。我所见过的比较严重的情况就有两种，一种多见于产品经理，设计一个产品或者模块时，总想一步到位，做成一个强大而全面的系统，结果开发和设计都只能摊摊手说：“这玩意太复杂，我们需要更多精力更长时间”，等做出来了可能突然发现这不是用户想要的，囧；另一种情况隐藏的稍微深一点，举例来说就是maxthon2到maxthon3的跨越（请原谅我拿公司的历史举例，但是历史就是容易重演不是），两个版本之间没有过渡迭代，先不说开发长期以来所维护、重构和沉淀下来的框架全扔了的问题，就产品跳跃性太大所带来的风险就足以让人担心了。其实快速迭代从小而简单的东西开始，灵活多变，可以及时根据情况调整方向，不失为一种降低风险的好方法。
+1. **快速迭代**：这个看似简单，往往实践起来最容易被人忽视。我所见过的比较严重的情况就有两种，一种多见于产品经理，设计一个产品或者模块时，总想一步到位，做成一个强大而全面的系统，结果开发和设计都只能摊摊手说：“这玩意太复杂，我们需要更多精力更长时间”，等做出来了可能突然发现这不是用户想要的，囧；另一种情况隐藏的稍微深一点，举例来说就是maxthon2到maxthon3的跨越（请原谅我拿公司的历史举例），两个版本之间没有过渡迭代，先不说开发长期以来所维护、重构和沉淀下来的框架全扔了的问题，就产品跳跃性太大所带来的风险就足以让人担心了。其实快速迭代从小而简单的东西开始，灵活多变，可以及时根据情况调整方向，不失为一种降低风险的好方法。
 
 2. **主动的态度**：积极的态度是很重要的，被动的工作只会让自己越来越平庸。项目开发，特别是跨部门合作中，经常需要协调资源，这时你就要多想想扁平化、打破分工和全功能团队这些单词，你不仅仅是个开发，你是项目的一份子，你需要去推动你需要的资源，推动整个项目向前走。每个人都很积极的团队才是最高效的团队。scrum流程就是将协调资源的工作从开发和设计手中解放出来，让开发和设计可以更专注自己的代码和设计，scrum master和product owner将大部分的推进职责都抽在自己身上，所以他们的角色就相当重要。我坚信在scrum中非常active的sm和po是很值得推崇的。另外，在会议或者平时的交流中，每个人最好拥有主动的态度，你需要多说，表达自己的观点，这对于个人和项目都是很有好处的。
 
