--- a/_posts/2012-10-23-2012移动开发者大会有感.md
+++ b/_posts/2012-10-23-2012移动开发者大会有感.md
@@ -4,7 +4,7 @@ title: 2012移动开发者大会有感
 ---
 2012.10.19和20两天，有机会参加了CSDN和创新工场主办的2012年移动开发者大会，听了很多业内知名人士关于很多方面的主题演讲，有一些零零散散的感悟，趁还没有完全忘记，在这里梳理、记录、分享一下：
 
-**关于大趋势**：
+####关于大趋势：
 
 毫无疑问，现在ios和安卓在国内的发展速度都是很迅猛的，看看你身边，几乎全是ios和安卓用户，李开复说的很好：“现在移动互联网进入2亿用户时代”（其中ios6千万，安卓1.4亿，这是友盟的数据）。接下来，ios和安卓会快速向二三四线城市渗透，前景是很美好的。
 
@@ -14,20 +14,22 @@ title: 2012移动开发者大会有感
 
 谈到什么样的产品才是好产品时，李开复总结的很好，一个好的app至少要满足以下4点中的一个：简单、有用、好玩、畅快。对于什么是一个好的社交应用，他也总结的很好，“直指人心，让一群人沉迷和狂热，并具有可持续性，用户行为会沉淀为用户内容”。
 
-**关于老外和兴趣**
+####关于老外和兴趣
 
 大会第一天的日程很有意思，上午都是国内的大佬包括马化腾、李开复等等大谈特谈如何商业模式、如何推广、如何赚钱。到了下午，风格一变，国外嘉宾上场，包括google X实验室创始人、epic创始人、音乐哥王戈等，不谈推广不谈赚钱，只谈科技、未来和兴趣。
 
-当然很可能是大会安排如此，不过还是会带给我一些思考，国内的程序猿同志们，工资说高不高，说低不低，面对着房车孩子的巨大压力，在考虑产品或者公司时，更多的是如何成功和赚钱。而对很多老外来说，物价并不高，房车也不是很大的问题，社会福利也很好，所以他们考虑产品货者公司时更多的是从兴趣和解决问题出发。两种出发点的不同，会在以后产生深远的影响，从兴趣出发的工作和创业，我相信会迸发更多的灵感和可能性。为什么引领互联网方向的很多伟大公司都诞生在国外，我想这也是一个原因。
+当然很可能是大会安排如此，不过还是会带给我一些思考，国内的程序猿同志们，工资说高不高，说低不低，面对着房车孩子的巨大压力，在考虑产品或者公司时，更多的是如何成功和赚钱。而对很多老外来说，物价并不高，房车也不是很大的问题，社会福利也很好，所以他们考虑产品或者公司时更多的是从兴趣和解决问题出发。两种出发点的不同，会在以后产生深远的影响，从兴趣出发的工作和创业，我相信会迸发更多的灵感和可能性。为什么引领互联网方向的很多伟大公司都诞生在国外，我想这也是一个原因。
 
 其实何止是移动互联网如此，其他行业不也是一样吗，所谓经济基础决定上层建筑，真的是很有道理。
 
-**关于创业**
+####关于创业
 
 大会第二天很有幸听到了创新工场合伙人汪华的演讲《给创业者的一点建议》，收获良多，他提到目前大家都不太清晰移动互联网该往哪走，接下来会是移动互联网的一个短暂的冬天，就像2003年的pc互联网一样，冬天过后，百花齐放。
 
 在提到创业团队时，他强调团队规模一定要保持少而精，这和我之前看的《rework》一书得到的启示一模一样，“小而美”是所有工程师的梦想，创业团队一定要精简，每个大的方面有一个人即可，技术总监啊、商务啊之类的是不需要的，如果分工太细，表面上看起来好像是一个完整的公司，其实会很降低效率。
 
 他还提到了快速迭代，创业团队来说，一个月内要做出能让用户感受到的变化，三个月要出产品，这也是我很赞同的。
+
+移动互联网公司应该大致分为两种，做用户量的公司和赚钱的公司，对于很多大平台或者工具类应用公司来说，用户量很重要，因为这是以后变现和开展其他业务线的基础，产品也需要慢慢沉淀；但是对于很多游戏类公司来说，情况就有点不太一样，因为游戏本身生命周期短、赚钱快的特质，快在游戏公司就显得更为重要，这也并不是代表不需要沉淀和打磨，只是需要区别于工具类公司的程度，如果自己做游戏引擎或者有一款很受欢迎的游戏，那么细细打磨也是必须的。
 
 提到和大公司竞争时，他认为创业团队得把握住灵活性和细分，像歪歪、安卓和豆瓣就是很成功的例子，这在山寨横行的中国，尤其在腾讯这样的巨头面前，是广大创业者不得不考虑的问题
