modify new article

--- a/_posts/2015-11-01-卡牌游戏的下一步.md
+++ b/_posts/2015-11-01-卡牌游戏的下一步.md
@@ -2,7 +2,7 @@
 layout: post 
 title: 卡牌游戏的下一步
 ---
-最近看了一些文章，关于《三体》里的升维思考、降维打击，感悟颇深。这段时间也一直在尝试升维思考，来反思我们创业而两年陷入困境的游戏，到底核心点在哪里
+最近看了一些文章，关于《三体》里的升维思考、降维打击，感悟颇深。这段时间也一直在尝试升维思考，来反思我们创业两年而陷入困境的游戏，到底核心点在哪里
 
 总结下来，就是两点：**卡牌的收集培养**，**排兵布阵的战斗**
 
